[project]
name = "foodgacha"
version = "0.2.0"
description = "A terminal gacha game for choosing a nearby restaurant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "readchar>=4.2",
    "rich>=13.9",
    "typer>=0.15",
]

[project.scripts]
foodgacha = "foodgacha.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
